# tensorflow-cpp

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: mail.yml  main.yml
abseil/: build.sh
docker/debian_bullseye_gpu-base/: Dockerfile
docker/debian_bullseye_gpu-tf/: Dockerfile
protobuf/: build.sh
tensorflow/: CMakeLists.txt
tensorflow/cmake/: tensorflow-config.cmake.in
tensorflow/examples/: CMakeLists.txt
